--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js -p",
-    "build": "webpack --config webpack.config.js -p",
-    "heroku-postbuild":"webpack -p --config webpack.config.js"
-  },
+    "build": "webpack --config webpack.config.js -p"},
   "keywords": [],
   "author": "Jun Pan",
   "license": "ISC",
