--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-prebuild":"npm install --dev",
     "start": "webpack-dev-server --config webpack.config.js -p",
-    "build": "webpack --config webpack.config.js -p",
+    "build": "webpack --config webpack.config.js -p", 
     "heroku-postbuild":"webpack -p --config webpack.config.js"
   },
 
