--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "heroku-prebuild":"npm install --dev",
     "start": "webpack-dev-server --config webpack.config.js -p",
-    "build": "webpack --config webpack.config.js -p", 
-    "heroku-postbuild":"webpack -p --config webpack.config.js"
+    "build": "webpack --config webpack.config.js -p"
   },
 
   "keywords": [],
