--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild":"npm install --dev",
-    "start": "webpack-dev-server --config webpack.config.js -p",
+    "heroku-prebuild": "npm install --dev",
+    "start": "webpack-dev-server --config webpack.config.js --open -d",
     "build": "webpack --config webpack.config.js -p"
   },
-
   "keywords": [],
   "author": "Jun Pan",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
