--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "heroku-prebuild": "npm install --dev",
-    "start": "webpack-dev-server --config webpack.config.js --open -d",
+    "start": "webpack-dev-server --config webpack.config.js -p",
     "build": "webpack --config webpack.config.js -p"
   },
   "keywords": [],
