add node version

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "10.16.0"
+  },
   "scripts": {
     "heroku-prebuild": "npm install --dev",
     "start": "webpack-dev-server --config webpack.config.js -p",
